전투 기록 추가 등록 진행

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="lolmenu_label_userIput">사용자 입력</string>
     <string name="lolmenu_label_userInfo">사용자 정보</string>
     <string name="lolmenu_label_champInfo">챔피언 정보</string>
+    <string name="title_activity_func_match_dialog">funcMatchDialog</string>
+    <string name="title_activity_match">MatchActivity</string>
 </resources>
